Cleanup javascript, fix layout bug
git-svn-id: https://svn.surfnet.nl/svn/coin-eb/static/trunk@809 528793b8-127e-4309-9901-b74759c7208d

--- a/css/narrow/screen.css
+++ b/css/narrow/screen.css
@@ -570,6 +570,10 @@ a.cancel {
 /*	height:239px;*/
 	height:235px;	
 }
+
+#scrollViewportHelp {
+	height: 235px;
+}
 .jspVerticalBar {
 
 	background-color:transparent;
